; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/android/jni/extr_sndopensl.c_SNDOpenSLUpdateAudio.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/android/jni/extr_sndopensl.c_SNDOpenSLUpdateAudio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 (%struct.TYPE_3__**, i64, i32)* }

@stereodata16 = common dso_local global i64* null, align 8
@currentpos = common dso_local global i64 0, align 8
@soundoffset = common dso_local global i32* null, align 8
@mbufferSizeInBytes = common dso_local global i32 0, align 4
@muted = common dso_local global i32 0, align 4
@bqPlayerBufferQueue = common dso_local global %struct.TYPE_3__** null, align 8
@SL_RESULT_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [18 x i8] c"Fail to Add queue\00", align 1
@MAX_BUFFER_CNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32)* @SNDOpenSLUpdateAudio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SNDOpenSLUpdateAudio(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %10 = load i32, i32* %6, align 4
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 4
  %13 = mul i64 %12, 2
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* %7, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i64*, i64** @stereodata16, align 8
  %18 = load i64, i64* @currentpos, align 8
  %19 = getelementptr inbounds i64, i64* %17, i64 %18
  %20 = load i64, i64* %19, align 8
  %21 = inttoptr i64 %20 to i32*
  %22 = load i32*, i32** @soundoffset, align 8
  %23 = load i64, i64* @currentpos, align 8
  %24 = getelementptr inbounds i32, i32* %22, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %21, i64 %26
  %28 = load i32, i32* %7, align 4
  %29 = sext i32 %28 to i64
  %30 = udiv i64 %29, 4
  %31 = udiv i64 %30, 2
  %32 = trunc i64 %31 to i32
  %33 = call i32 @sdlConvert32uto16s(i32* %15, i32* %16, i32* %27, i32 %32)
  %34 = load i32, i32* %7, align 4
  %35 = load i32*, i32** @soundoffset, align 8
  %36 = load i64, i64* @currentpos, align 8
  %37 = getelementptr inbounds i32, i32* %35, i64 %36
  %38 = load i32, i32* %37, align 4
  %39 = add nsw i32 %38, %34
  store i32 %39, i32* %37, align 4
  %40 = load i32*, i32** @soundoffset, align 8
  %41 = load i64, i64* @currentpos, align 8
  %42 = getelementptr inbounds i32, i32* %40, i64 %41
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* @mbufferSizeInBytes, align 4
  %45 = icmp sge i32 %43, %44
  br i1 %45, label %46, label %83

46:                                               ; preds = %3
  %47 = load i32, i32* @muted, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %72, label %49

49:                                               ; preds = %46
  %50 = load i64, i64* @currentpos, align 8
  %51 = call i32 @push_index(i64 %50)
  %52 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @bqPlayerBufferQueue, align 8
  %53 = load %struct.TYPE_3__*, %struct.TYPE_3__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 0
  %55 = load i64 (%struct.TYPE_3__**, i64, i32)*, i64 (%struct.TYPE_3__**, i64, i32)** %54, align 8
  %56 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @bqPlayerBufferQueue, align 8
  %57 = load i64*, i64** @stereodata16, align 8
  %58 = load i64, i64* @currentpos, align 8
  %59 = getelementptr inbounds i64, i64* %57, i64 %58
  %60 = load i64, i64* %59, align 8
  %61 = load i32*, i32** @soundoffset, align 8
  %62 = load i64, i64* @currentpos, align 8
  %63 = getelementptr inbounds i32, i32* %61, i64 %62
  %64 = load i32, i32* %63, align 4
  %65 = call i64 %55(%struct.TYPE_3__** %56, i64 %60, i32 %64)
  store i64 %65, i64* %9, align 8
  %66 = load i64, i64* @SL_RESULT_SUCCESS, align 8
  %67 = load i64, i64* %9, align 8
  %68 = icmp ne i64 %66, %67
  br i1 %68, label %69, label %71

69:                                               ; preds = %49
  %70 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %83

71:                                               ; preds = %49
  br label %72

72:                                               ; preds = %71, %46
  %73 = load i64, i64* @currentpos, align 8
  %74 = add i64 %73, 1
  %75 = trunc i64 %74 to i32
  store i32 %75, i32* %8, align 4
  %76 = load i32, i32* %8, align 4
  %77 = load i32, i32* @MAX_BUFFER_CNT, align 4
  %78 = icmp sge i32 %76, %77
  br i1 %78, label %79, label %80

79:                                               ; preds = %72
  store i32 0, i32* %8, align 4
  br label %80

80:                                               ; preds = %79, %72
  %81 = load i32, i32* %8, align 4
  %82 = sext i32 %81 to i64
  store i64 %82, i64* @currentpos, align 8
  br label %83

83:                                               ; preds = %69, %80, %3
  ret void
}

declare dso_local i32 @sdlConvert32uto16s(i32*, i32*, i32*, i32) #1

declare dso_local i32 @push_index(i64) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
